interstellar/tests/gql/snapshots/gql__snapshots__parse_sum_snapshot.snap
---
source: interstellar/tests/gql/snapshots.rs
expression: ast
---
match_clause:
  patterns:
    - elements:
        - Node:
            variable: n
            labels:
              - Order
            properties: []
            where_clause: ~
optional_match_clauses: []
with_path_clause: ~
unwind_clauses: []
where_clause: ~
call_clauses: []
call_procedure_clauses: []
let_clauses: []
with_clauses: []
return_clause:
  distinct: false
  items:
    - expression:
        Aggregate:
          func: Sum
          distinct: false
          expr:
            Property:
              variable: n
              property: total
      alias: ~
group_by_clause: ~
having_clause: ~
order_clause: ~
limit_clause: ~
