interstellar/tests/gql/snapshots/gql__snapshots__parse_type_function_snapshot.snap
---
source: tests/gql/snapshots.rs
expression: ast
---
match_clause:
  patterns:
    - elements:
        - Node:
            variable: p
            labels:
              - player
            properties: []
            where_clause: ~
        - Edge:
            variable: e
            labels:
              - played_for
            direction: Outgoing
            quantifier: ~
            properties: []
            where_clause: ~
        - Node:
            variable: t
            labels:
              - team
            properties: []
            where_clause: ~
optional_match_clauses: []
with_path_clause: ~
unwind_clauses: []
where_clause: ~
call_clauses: []
let_clauses: []
with_clauses: []
return_clause:
  distinct: false
  items:
    - expression:
        FunctionCall:
          name: type
          args:
            - Variable: e
      alias: ~
group_by_clause: ~
having_clause: ~
order_clause: ~
limit_clause: ~
